tdf#105002 Don't crash on mail wizard recreation

Change-Id: I8af4753cc654ec475d40223a64afa50a9de332ab
Reviewed-on: https://gerrit.libreoffice.org/38007
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Jan Holesovsky <kendy@collabora.com>
(cherry picked from commit ce40f2798f0fa2f8f6e3084e4bbbd50e749c55d6)